syntax = "proto3";

import "aelf/core.proto";

option csharp_namespace = "TomorrowDAO.Contracts.Governance";

message AuthorityInfo {
  aelf.Address contract_address = 1;
  aelf.Address owner_address = 2;
}